# river

./: ..gitignore.swp  .gitattributes  .gitignore  .gitignore.save  .gitmodules  .hgignore  BUILD_INSTRUCTIONS_WINDOWS.txt  CMakeCache.txt  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  Untitled.ipynb  a_buildtools.sh  a_exportvariables.sh  a_solveZ3Links.sh  a_update.sh  build-all.sh  clean-all.sh  clean-cmake.sh  cmake_install.cmake  evaluators.sln  installRiverTools.sh  installVsCode.sh  install_manifest.txt  makeSDK.bat  makeSDK.sh  release.conf  river.format  trace.simple.out  vsbuild_full.sh  vsbuild_light.sh
BinLoader/: Abstract.Importer.h  Abstract.Loader.h  Abstract.Mapper.h  BinLoader.vcxproj  CMakeLists.txt  Common.cpp  Common.h  ELF.Loader.cpp  ELF.Loader.h  Extern.Mapper.cpp  Extern.Mapper.h  Inproc.Mapper.cpp  Inproc.Mapper.h  Inproc.Native.Importer.cpp  Inproc.Native.Importer.h  LoaderAPI.cpp  LoaderAPI.h  Main.cpp  Makefile  Mem.Mapper.cpp  Mem.Mapper.h  PE.Loader.cpp  PE.Loader.h  Shm.Mapper.cpp  Shm.Mapper.h  Types.h  Unified.Loader.cpp  cmake_install.cmake  st2xJE58  tested
BinLoader/tmp/: .cproject  Tester.cpp  tester
DisableSSE/: CMakeLists.txt  DisableSSEHelper.c  Makefile
Execution/: CMakeLists.txt  Common.h  CommonExecutionController.cpp  CommonExecutionController.h  CommonExecutionController2.cpp  Debugger.cpp  Debugger.h  DualAllocator.Linux.cpp  DualAllocator.Windows.cpp  DualAllocator.cpp  DualAllocator.h  Execution.h  Execution.vcxproj  ExternExecutionController.Linux.cpp  ExternExecutionController.Windows.cpp  ExternExecutionController.cpp  ExternExecutionController.h  InprocessExecutionController.cpp  InprocessExecutionController.h  InternalExecutionController.cpp  InternalExecutionController.h  InternalExecutionController2.cpp  InternalExecutionControllerExt.cpp  LargeStack.cpp  LargeStack.h  Main.cpp  Makefile  RiverStructs.h  ShmTokenRingWinInit.cpp  ShmTokenRingWinInit.h  TokenRingInit.Linux.cpp  TokenRingInit.Linux.h  TokenRingInit.Windows.cpp  TokenRingInit.Windows.h  cmake_install.cmake
Execution/Loader/: Common.h  Extern.Mapper.cpp  Extern.Mapper.h  Inproc.Mapper.cpp  Inproc.Mapper.h  PE.ldr.cpp  PE.ldr.h  Types.h
ParserPayload/: CMakeLists.txt  Common.h  Makefile  ParserPayload.vcxproj  Payload.cpp
River2/DisableSSE/: CMakeLists.txt
River2/VirtualMemory/: CMakeLists.txt  VirtualMem.cpp  VirtualMemory.vcxproj
River2/ipclib/: CMakeLists.txt  RingBuffer.h  common.h  ipclib.cpp  ipclib.h  ipclib.vcxproj
River2/riverexp/: CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  RiverexpConfig.h  riverexp_.cpp
SymbolicDemo/: CMakeLists.txt  LargeStack.cpp  LargeStack.h  Makefile  OverlappedRegisters.cpp  OverlappedRegisters.h  Payload.cpp  Payload.h  RevSymbolicEnvironment.cpp  RevSymbolicEnvironment.h  ReversibleAction.h  SymbolicDemo.vcxproj  SymbolicDemoMain.cpp  SymbolicEnvironment.cpp  SymbolicEnvironment.h  TrackingCookie.cpp  TrackingCookie.h  VariableTracker.h  Z3SymbolicExecutor.cpp  Z3SymbolicExecutor.h  Z3SymbolicFlags.cpp  util.h
SymbolicEnvironment/: CMakeLists.txt  Environment.cpp  Environment.h  LargeStack.cpp  LargeStack.h  Makefile  OverlappedRegisters.cpp  OverlappedRegisters.h  RevSymbolicEnvironment.cpp  RevSymbolicEnvironment.h  SymbolicEnvironment.cpp  SymbolicEnvironment.h  SymbolicEnvironment.vcxproj  cmake_install.cmake
VirtualMemory/: CMakeLists.txt  Makefile  MemoryLayout.Linux.cpp  MemoryLayout.Windows.cpp  MemoryLayout.h  VirtualMem.cpp  VirtualMem.h  cmake_install.cmake
benchmarking-payload/: CMakeCache.txt  CMakeLists.txt  Makefile  clean-cmake.sh  cmake_install.cmake  install_benchmarks.sh
benchmarking-payload/fmi/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fmi.c  fmi.c.presentation.c  fmidiss.txt  install_manifest.txt  libfmi_dissassembly.txt  sampleinput.txt  test_inference.sh  trace.simple (copy).out  trace.simple.out
benchmarking-payload/freetype-payload/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Payload.cpp  cmake_install.cmake
benchmarking-payload/gumbo-payload/: CMakeCache.txt  (+5 more)
ipclib/: AbstractShmTokenRing.h  AbstractTokenRing.h  CMakeLists.txt  Makefile  RingBuffer.h  ShmTokenRing.cpp  ShmTokenRing.h  ShmTokenRingLin.cpp  ShmTokenRingLin.h  ShmTokenRingWin.cpp  ShmTokenRingWin.h  UnifiedShmTokenRing.cpp  cmake_install.cmake  common.h  ipclib.cpp  ipclib.h  ipclib.vcxproj
loader/: CMakeLists.txt  Loader.Linux.Stub.S  Loader.Linux.cpp  Loader.Windows.cpp  Loader.h  Main.cpp  Makefile  cmake_install.cmake  loader.cpp  loader.h  loader.linux.cpp  loader.vcxproj
loader.setup/: CMakeLists.txt  Loader.Setup.h  Setup.Windows.cpp  loader.setup.vcxproj
revtracer/: .CMakeLists.txt.swp  AddressContainer.cpp  AddressContainer.h  BasicTypes.h  CMakeLists.txt  CodeGen.h  DebugPrintFlags.h  GenericX86Assembler.cpp  GenericX86Assembler.h  Makefile  MapPE.cpp  NativeX86Assembler.cpp  NativeX86Assembler.h  PreTrackingX86Assembler.cpp  PreTrackingX86Assembler.h  RelocableCodeBuffer.cpp  RelocableCodeBuffer.h  RiverAddress.cpp  RiverAddress.h  RiverMetaTranslator.cpp  RiverMetaTranslator.h  RiverPrintTable.cpp  RiverRepAssembler.cpp  RiverRepAssembler.h  RiverRepTranslator.cpp  RiverRepTranslator.h  RiverReverseCode.cpp  RiverReverseTranslator.cpp  RiverReverseTranslator.h  RiverSaveCode.cpp  RiverSaveTranslator.cpp  RiverSaveTranslator.h  RiverTox86.cpp  RiverTox87.cpp  RiverTrackingX86Assembler.cpp  RiverTrackingX86Assembler.h  RiverX86Assembler.cpp  RiverX86Assembler.h  RiverX86Disassembler.cpp  RiverX86Disassembler.h  (+70 more)
revtracer-wrapper/: CMakeLists.txt  Main.cpp  Makefile  RevtracerWrapper.cpp  RevtracerWrapper.h  ShmTokenRingLin.cpp  ShmTokenRingLin.h  ShmTokenRingWin.cpp  TokenRing.Linux.h  TokenRing.Windows.h  TokenRing.h  UnifiedTokenRing.cpp  Wrapper.Global.h  Wrapper.Linux.cpp  Wrapper.Windows.cpp  cmake_install.cmake  revtracer-wrapper.vcxproj  setup-libs.sh
riverexp/: CMakeLists.txt  RiverExp  Riverexp  RiverexpConfig.h  RiverexpConfig.h.in  covinputsresults.txt  install_manifest.txt  riverexp.cpp  sampleinput.txt  trace.simple.out
(+513 files in other folders)
