include_directories(${CMAKE_SOURCE_DIR})

#add_subdirectory(jsmn-payload)
#add_subdirectory(gumbo-payload)
#add_subdirectory(libxml2-payload)
#add_subdirectory(libpng-payload)
#add_subdirectory(freetype-payload)
#add_subdirectory(http-parser-payload)
#add_subdirectory(libjpeg-turbo-payload)
#add_subdirectory(simple-address-payload)
#add_subdirectory(simple-accumulator-payload)
add_subdirectory(fmi)

